- Wed Apr 07 2010 Ira Weiny <weiny2@llnl.gov>

	* : ibtraceroute: clean up error when no nodes are specified
	* : ibtraceroute: add "-m" option
	* : ibtraceroute: Default one node to "local" node
	* : ibtraceroute: fixed exit codes on lookup failure.

- Wed Mar 31 2010 Ira Weiny <weiny2@llnl.gov>

	* : tag 1.0.4-2

- Tue Mar 30 2010 Ira Weiny <weiny2@llnl.gov>

	* : Added --hosts option to slurm_topology
	* : cleaned up output of slurm_topology
		 - ordered switches
		 - grouped levels
		 - printed missing and looked for "compute" nodes

- Fri Feb 19 2010 Ira Weiny <weiny2@llnl.gov>

	* : tag 1.0.4
	* : Added ibhcacounters

- Thu Feb 18 2010 Ira Weiny <weiny2@llnl.gov>

	* : tag 1.0.3-2

- Tue Feb 09 2010 Ira Weiny <weiny2@llnl.gov>

	* : Added -g/-q option to slurm_topology

- Thu Feb 04 2010 Ira Weiny <weiny2@llnl.gov>

	* : Added -n option to slurm_topology

- Tue Dec 10 2009 Ira Weiny <weiny2@llnl.gov>

	* : tag 1.0.3
	* : change ibsrp log dir to "/var/log/ibsrp"
	* : Remove modprobing of IB cards from ibsrp init script.  depmod and
	    modprobe should deal with "modprobe ib_srp" correctly.
	* : changed the unloading of ib_srp module and the stopping of the daemons

- Tue Nov 17 2009 Ira Weiny <weiny2@llnl.gov>

	* : tag 1.0.2
	* : Initial checkin of ibgraphfabric C version.
	* : Remove unused assignment in slurm_topology

- Tue Oct 27 2009 Ira Weiny <weiny2@llnl.gov>

	* : bump version to 1.0.1 as slurm_topology now requires libibnetdisc
	* : Add slurm_topology utility

- Fri Oct 16 2009 Ira Weiny <weiny2@llnl.gov>

	* : improve ibbouncelinks.pl
		Add QDR skip option. (including lengthening timeout for QDR ports)
		Update help message
		pretify output with progress "."

- Thu Oct 08 2009 Ira Weiny <weiny2@llnl.gov>

	* : add device and port support to node specification in ibcheckverbs

- Fri Oct 02 2009 Ira Weiny <weiny2@llnl.gov>

	* : add -m option to ibtrackerrors and ibcheckfabric

- Wed Sep 30 2009 Ira Weiny <weiny2@llnl.gov>
