@@ -1,3 +1,11 @@
+- Fri Apr 23 2010 Mark Grondona <grondona1@llnl.gov>
+
+	* : Use genders_query correctly.
+
+- Thu Apr 22 2010 Ira Weiny <weiny2@llnl.gov>
+
+	* : Update hostlist code to latest version
+
 - Wed Apr 07 2010 Ira Weiny <weiny2@llnl.gov>
 
 	* : ibtraceroute: clean up error when no nodes are specified
